fixing masonry centered layout issue

--- a/scss/jk.scss
+++ b/scss/jk.scss
@@ -70,7 +70,7 @@ h4{
  	// float: left;
  	// display:block;
  	min-height:194px;
- 	margin: 20px auto;
+ 	margin: 20px;
  	// background: #fff;
  	border: 1px solid #efefef;
  	padding:10px;
